--- a/assets/app.css
+++ b/assets/app.css
@@ -102,10 +102,6 @@ footer {
     padding: 70px 0 120px;
   }
 
-  .full.tabbed {
-    padding: 130px 0 120px;
-  }
-
   .tab {
     top: 70px;
     height: 50px;
@@ -170,8 +166,8 @@ footer {
   }
 
   #system {
-    left: 25%;
-    width: 75%;
+    left: 0;
+    width: 100%;
   }
 
   footer {
@@ -580,6 +576,131 @@ svg path {
 
 #main-artist {
   font-size: 20px;
+}
+
+@media (orientation: landscape) {
+  .system-box {
+    display: flex;
+    width: 100%;
+    height: 100%;
+  }
+
+  .system-nav {
+    width: 25%;
+  }
+
+  .system-articles {
+    width: 75%;
+  }
+}
+
+@media (orientation: portrait) {
+  .system-box {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media (orientation: landscape) {
+  .system-nav {
+    display: flex;
+    padding: 20px 0;
+    flex-direction: column;
+    align-items: stretch;
+  }
+
+  .system-nav-item {
+    height: 40px;
+    font-size: 18px;
+    text-align: left;
+    padding: 0 20px;
+    margin: 0 10px;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  }
+
+  .light .system-nav-item {
+    color: #404040;
+  }
+
+  .dark .system-nav-item {
+    color: #e0e0e0;
+  }
+
+  .system-nav-item.on {
+    border-radius: 2px;
+  }
+
+  .light .system-nav-item.on {
+    background-color: #404040;
+    color: #e0e0e0;
+  }
+
+  .dark .system-nav-item.on {
+    background-color: #e0e0e0;
+    color: #404040;
+  }
+}
+
+@media (orientation: portrait) {
+  .system-nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .system-nav-item {
+    padding: 3px 8px;
+    color: #e0e0e0;
+    font-size: 18px;
+    box-sizing: border-box;
+    border-style: solid none solid solid;
+    border-width: 3px;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  }
+
+  .light .system-nav-item {
+    border-color: #404040;
+    color: #404040;
+  }
+
+  .dark .system-nav-item {
+    border-color: #e0e0e0;
+    color: #e0e0e0;
+  }
+
+  .system-nav-item:first-child {
+    border-radius: 20px 0 0 20px / 20px 0 0 20px;
+    padding: 3px 8px 3px 20px;
+  }
+
+  .system-nav-item:last-child {
+    border-style: solid;
+    border-radius: 0 20px 20px 0 / 0 20px 20px 0;
+    padding: 3px 20px 3px 8px;
+  }
+
+  .light .system-nav-item.on {
+    background-color: #404040;
+    color: #e0e0e0;
+  }
+
+  .dark .system-nav-item.on {
+    background-color: #e0e0e0;
+    color: #404040;
+  }
+}
+
+.system-nav-item {
+  transition: background-color 0.2s 0s ease, color 0.2s 0s ease;
+}
+
+.system-article {
+  display: none;
+}
+
+.system-article.on {
+  display: block;
 }
 
 .system-header {
@@ -1449,112 +1570,3 @@ svg path {
   margin: 3px;
 }
 
-@media (orientation: portrait) {
-  .tab {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .tab-items {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .tab-item {
-    padding: 3px 8px;
-    color: #e0e0e0;
-    font-size: 18px;
-    box-sizing: border-box;
-    border-style: solid none solid solid;
-    border-width: 3px;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  }
-
-  .light .tab-item {
-    border-color: #404040;
-    color: #404040;
-  }
-
-  .dark .tab-item {
-    border-color: #e0e0e0;
-    color: #e0e0e0;
-  }
-
-  .tab-item:first-child {
-    border-radius: 20px 0 0 20px / 20px 0 0 20px;
-    padding: 3px 8px 3px 20px;
-  }
-
-  .tab-item:last-child {
-    border-style: solid;
-    border-radius: 0 20px 20px 0 / 0 20px 20px 0;
-    padding: 3px 20px 3px 8px;
-  }
-
-  .light .tab-item.on {
-    background-color: #404040;
-    color: #e0e0e0;
-  }
-
-  .dark .tab-item.on {
-    background-color: #e0e0e0;
-    color: #404040;
-  }
-}
-
-@media (orientation: landscape) {
-  .tab-items {
-    padding: 20px 0;
-    display: flex;
-    flex-direction: column;
-    align-items: stretch;
-    justify-content: center;
-  }
-
-  .tab-item {
-    height: 40px;
-    font-size: 18px;
-    text-align: left;
-    padding: 0 20px;
-    margin: 0 10px;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  }
-
-  .light .tab-item {
-    color: #404040;
-  }
-
-  .dark .tab-item {
-    color: #e0e0e0;
-  }
-
-  .tab-item.on {
-    border-radius: 2px;
-  }
-
-  .light .tab-item.on {
-    background-color: #404040;
-    color: #e0e0e0;
-  }
-
-  .dark .tab-item.on {
-    background-color: #e0e0e0;
-    color: #404040;
-  }
-}
-
-.tab-item {
-  transition: background-color 0.2s 0s ease, color 0.2s 0s ease;
-}
-
-.tab-page {
-  display: none;
-}
-
-.tab-page.on {
-  display: block;
-}
