--- a/assets/app.css
+++ b/assets/app.css
@@ -15,6 +15,12 @@ button::-moz-focus-inner {
 }
 
 button {
+  color: inherit;
+  /* Disable Presto Opera default value. */
+  font-family: inherit;
+  font-weight: inherit;
+  text-align: inherit;
+  text-indent: inherit;
   outline: 0;
   padding: 0;
   margin: 0;
@@ -284,6 +290,101 @@ svg path {
 
 .dark.auto-hide-scrollbar .scrollable::-webkit-scrollbar-thumb:hover {
   background-color: rgba(208, 208, 208, 0.6);
+}
+
+.header-items {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  align-content: space-around;
+  margin: 0;
+  padding: 15px 10px;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+}
+
+.app .header-items {
+  padding: 20px 10px 10px 10px;
+}
+
+.header-item {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+.header-item:first-of-type {
+  margin: 0;
+}
+
+.header-item:nth-of-type(n+2) {
+  margin: 0 0 0 10px;
+}
+
+.header-item:hover,
+.header-item:active {
+  outline: 0;
+}
+
+.header-iconlabel {
+  flex: 1 1 auto;
+}
+
+.header-item-iconlabel {
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  width: 100%;
+}
+
+.header-item-icon {
+  width: 32px;
+  height: 32px;
+  stroke-width: 16;
+  transition: width 0.2s 0s ease, height 0.2s 0s ease;
+}
+
+.animation .header-item:hover .header-item-icon {
+  animation: hover_img 0.5s linear 0s;
+}
+
+.header-item:active .header-item-icon,
+.header-item.active .header-item-icon {
+  width: 28px;
+  height: 28px;
+}
+
+.header-item-label {
+  flex: 1 1 auto;
+  width: 40px;
+  margin: 0 4px;
+  font-size: 20px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.view-list #menu-back.root {
+  visibility: hidden;
+}
+
+.view-system #menu-back-content {
+  display: none;
+}
+
+@media (orientation: portrait) {
+  .view-main #menu-main {
+    visibility: hidden;
+  }
+
+  .view-main #menu-back-content {
+    display: none;
+  }
+}
+
+@media (orientation: landscape) {
+  .view-main #menu-back.root {
+    visibility: hidden;
+  }
 }
 
 #background-image {
@@ -1101,104 +1202,6 @@ svg path {
   margin: 5px;
 }
 
-.header-items {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  align-content: space-around;
-  margin: 0;
-  padding: 15px 10px;
-  width: 100%;
-  height: 100%;
-  box-sizing: border-box;
-}
-
-.app .header-items {
-  padding: 20px 10px 10px 10px;
-}
-
-.header-item {
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  display: flex;
-  align-items: center;
-  width: 32px;
-}
-
-.header-item:first-of-type {
-  margin: 0;
-}
-
-.header-item:nth-of-type(n+2) {
-  margin: 0 0 0 10px;
-}
-
-.header-item.icon {
-  justify-content: center;
-}
-
-.header-item.iconlabel {
-  flex: 1 1 auto;
-  flex-flow: row nowrap;
-  align-items: center;
-  width: 32px;
-}
-
-.header-item:hover,
-.header-item:active {
-  outline: 0;
-}
-
-.header-icon {
-  width: 32px;
-  height: 32px;
-  stroke-width: 16;
-  transition: width 0.2s 0s ease, height 0.2s 0s ease;
-}
-
-.animation .header-item:hover .header-icon {
-  animation: hover_img 0.5s linear 0s;
-}
-
-.header-item:active .header-icon,
-.header-item.active .header-icon {
-  width: 28px;
-  height: 28px;
-}
-
-.header-label {
-  flex: 1 1 auto;
-  width: 40px;
-  margin: 0 4px;
-  font-size: 20px;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  white-space: nowrap;
-}
-
-.view-list #menu-back.root {
-  visibility: hidden;
-}
-
-.view-system #menu-back-content {
-  display: none;
-}
-
-@media (orientation: portrait) {
-  .view-main #menu-main {
-    visibility: hidden;
-  }
-
-  .view-main #menu-back-content {
-    display: none;
-  }
-}
-
-@media (orientation: landscape) {
-  .view-main #menu-back.root {
-    visibility: hidden;
-  }
-}
-
 #control {
   padding: 0 10px;
   border: 0;
@@ -1569,4 +1572,3 @@ svg path {
   padding: 1px 6px;
   margin: 3px;
 }
-
