fix: header icon animation

--- a/assets/app.css
+++ b/assets/app.css
@@ -323,6 +323,11 @@ svg path {
 
 .header-item {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 32px;
+  height: 32px;
 }
 
 .header-item:first-of-type {
