--- a/assets/app.css
+++ b/assets/app.css
@@ -51,7 +51,13 @@ header {
   left: 0;
   width: 100%;
   top: 0;
-  height: 70px;
+  height: 44px;
+  height: calc(44px + constant(safe-area-inset-top));
+}
+
+.app header {
+  height: 64px;
+  height: calc(44px + constant(safe-area-inset-top));
 }
 
 .tab {
@@ -106,7 +112,13 @@ footer {
   .full {
     left: 0;
     width: 100%;
-    padding: 70px 0 120px;
+    padding: 44px 0 90px;
+    padding: calc(44px + constant(safe-area-inset-top)) constant(safe-area-inset-right) calc(90px + constant(safe-area-inset-bottom)) constant(safe-area-inset-left);
+  }
+
+  .app .full {
+    padding: 64px 0 90px;
+    padding: calc(44px + constant(safe-area-inset-top)) constant(safe-area-inset-right) calc(90px + constant(safe-area-inset-bottom)) constant(safe-area-inset-left);
   }
 
   .tab {
@@ -131,13 +143,19 @@ footer {
   }
 
   footer {
-    height: 120px;
+    height: 90px;
+    height: calc(90px + constant(safe-area-inset-bottom));
   }
 }
 
 @media (orientation: landscape) {
   .full {
-    padding: 70px 0 90px;
+    padding: 44px 0 90px;
+  }
+
+  .app .full {
+    padding-top: 64px;
+    padding-top: calc(44px + constant(safe-area-inset-top));
   }
 
   .tab {
@@ -165,20 +183,24 @@ footer {
   .list {
     left: 0;
     width: 50%;
+    padding: calc(44px + constant(safe-area-inset-top)) 0 calc(90px + constant(safe-area-inset-bottom)) constant(safe-area-inset-left);
   }
 
   .main {
     left: 50%;
     width: 50%;
+    padding: calc(44px + constant(safe-area-inset-top)) constant(safe-area-inset-right) calc(90px + constant(safe-area-inset-bottom)) 0;
   }
 
   .system {
     left: 0;
     width: 100%;
+    padding: calc(44px + constant(safe-area-inset-top)) constant(safe-area-inset-right) calc(90px + constant(safe-area-inset-bottom)) constant(safe-area-inset-left);
   }
 
   footer {
     height: 90px;
+    height: calc(90px + constant(safe-area-inset-bottom));
   }
 }
 
@@ -209,11 +231,13 @@ body {
   transition: color 0.2s 0s ease;
 }
 
+html,
 body.light {
   color: #303030;
   background-color: #ffffff;
 }
 
+html,
 body.dark {
   color: #d0d0d0;
   background-color: #000000;
@@ -323,14 +347,15 @@ svg path {
   justify-content: space-between;
   align-content: space-around;
   margin: 0;
-  padding: 15px 10px;
+  padding: 0 10px;
   width: 100%;
-  height: 100%;
+  height: 44px;
   box-sizing: border-box;
 }
 
 .app .header-items {
-  padding: 20px 10px 10px 10px;
+  margin: 20px 0 0;
+  margin: constant(safe-area-inset-top) 0 0;
 }
 
 .header-item {
@@ -1287,6 +1312,8 @@ svg path {
   padding: 0 10px;
   border: 0;
   height: 90px;
+  margin: 0;
+  margin: 0 0 constant(safe-area-inset-bottom);
   display: flex;
   align-items: center;
   align-content: space-around;
@@ -1455,10 +1482,6 @@ svg path {
 }
 
 @media (orientation: portrait) {
-  .control {
-    padding: 10px 5%;
-  }
-
   .control-volume {
     width: 100%;
     order: -2;
